--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,6 +1,127 @@
-!!!
-html
+!!! 5
+html(lang="en")
   head
+    meta(charset="utf-8")
+    meta(name="description",content="")
+    meta(name="author",content="")
+
+    //if lt IE 9
+      script(src="http://html5shim.googlecode.com/svn/trunk/html5.js")
+
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
-  body!= body
+
+    link(rel="shortcut icon", href="images/favicon.ico")
+    link(rel="apple-touch-icon", href="images/apple-touch-icon.png")
+    link(rel="apple-touch-icon", sizes="72x72", href="images/apple-touch-icon-72x72.png")
+    link(rel="apple-touch-icon", sizes="114x114", href="images/apple-touch-icon-114x114.png")
+
+
+  body
+
+    div.topbar
+      div.topbar-inner
+        div.container-fluid
+          a(class="brand", href="#") Project name
+          ul.nav
+            li.active
+              a(href="#") Home
+            li
+              a(href="#about") About
+            li
+              a(href="#contact") Contact
+
+          p.pull-right Logged in as
+            a(href="#") username
+
+    div.container-fluid
+      div.sidebar
+        div.well
+          h5 Sidebar
+          ul
+            li
+              a(href="#") Link
+            li
+              a(href="#") Link
+            li
+              a(href="#") Link
+            li
+              a(href="#") Link
+
+          h5 Sidebar
+          ul
+            li
+              a(href="#") Link
+            li
+              a(href="#") Link
+            li
+              a(href="#") Link
+            li
+              a(href="#") Link
+            li
+              a(href="#") Link
+            li
+              a(href="#") Link
+
+          h5 Sidebar
+          ul
+            li
+              a(href="#") Link
+            li
+              a(href="#") Link
+
+
+
+      div.content
+        != body
+
+        div.hero-unit
+          h1 Hello, world!
+          p Vestibulum id ligula porta felis euismod semper. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.
+          p
+            a.btn.primary.large Learn more &raquo;
+
+
+        div.row
+          div.span6
+            h2 Heading
+            p Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.
+            p a(class="btn", href="#") View details &raquo;
+
+          div.span5
+            h2 Heading
+             p Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+            p
+              a(class="btn", href="#") View details &raquo;
+
+          div.span5
+            h2 Heading
+            p Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
+            p
+              a(class="btn", href="#") View details &raquo;
+
+
+
+        hr
+
+        div.row
+          div.span6
+            h2 Heading
+            p Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.
+            p
+              a(class="btn", href="#") View details &raquo;
+
+          div.span5
+            h2 Heading
+             p Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+            p
+              a(class="btn", href="#") View details &raquo;
+
+          div.span5
+            h2 Heading
+            p Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
+            p
+              a(class="btn", href="#") View details &raquo;
+
+        footer
+          p &copy; Company 2011
