--- a/public/stylesheets/layout.less
+++ b/public/stylesheets/layout.less
@@ -1,3 +1,56 @@
-body {
-  padding-top: 60px;
+// colors
+@foreColor:         #000;
+@linkColor:         rgba(0, 0, 0, 0.5);
+@linkColorHover:    @foreColor;
+@background:         #eee;
+@contentBackground:  darken(@background, 5);
+@postBackground:    #fff;
+@postColor:         #000;
+@postLinkColor:     rgba(0, 0, 0, 0.5);
+@postLinkColorHover: rgba(0, 0, 0, 0.8);
+
+
+html, body {
+  background-color: @background;
+  color:    @foreColor;
+}
+
+a, a:hover {
+  text-decoration: none;
+}
+
+header{
+  .user-controls {
+    float: right;
+  }
+}
+
+.page-header {
+  background-color: #f5f5f5;
+  padding: 20px 20px 10px;
+  margin: -20px -20px 20px;
+}
+
+footer{
+  //border-top: 1px solid @lightColor;
+  border: none;
+}
+
+.container > footer p {
+  text-align: center; /* center align it with the container */
+}
+
+/* The white background content wrapper */
+.content {
+  background-color: #eee;
+  padding: 20px;
+  margin: 0 -20px; /* negative indent the amount of the padding to maintain the grid system */
+  min-height: 500px;
+
+  .border-radius(10px);
+  //.box-shadow(0 1px 2px rgba(0,0,0,.15));
+  #gradient > .vertical(@contentBackground, @background);
+
+  .sidebar {
+  }
 }
