--- a/views/posts/index.jade
+++ b/views/posts/index.jade
@@ -1,1 +1,62 @@
-h1 Posts
+.row
+  .span12
+
+    .row.entry
+
+      .avatar-info
+        // avatar
+        .avatar
+          a.avatar(href="#", style="background-image:url('/images/avatar.png')", title="Jason's blog")
+
+      .new-post
+        form
+          .clearfix
+            textarea
+          .clearfix
+            a(href="#") Help &nbsp;
+            a(href="#") Expand &nbsp;
+            a(href="#") Upload Image&nbsp;
+            input.btn.primary(type="submit", value="Post")
+
+
+    .row.entry
+
+      .avatar-info
+        // avatar
+        .avatar
+          a.avatar(href="#", style="background-image:url('/images/avatar.png')", title="Jason's blog")
+          // show this on hover, click to pop menu
+          .user_info(onclick='function()')
+
+        // the popup menu
+        .user-menu
+          a(href="#") Chat
+          a(href="#") Unfollow
+
+      .post
+
+        .post-controls
+          a(href="#") 10 notes&nbsp;&nbsp;
+          a(href="#") reblog&nbsp;&nbsp;
+          a(href="#") like
+
+        .post-info
+          a(href="#") Jason Green
+            span :
+
+        .post-content
+          h3 The blog title
+          .inside-content
+            p blabla blabla. blabla blabla blabla blabla blabla blabla blabla blabla
+            p blabla blabla blabla blabla blabla blabla blabla blabla blabla blabla blabla blabla
+            p blabla blabla blabla blabla blabla blabla blabla blabla blabla blabla blabla blabla
+
+  .span4.sidebar
+
+    section
+      a.following(href="#") Following 30
+      a.follower(href="#") Follower 50
+
+    section
+      form
+        input(type="search", placeholder="Search here")
