add new-post textarea in post page

--- a/public/stylesheets/posts.less
+++ b/public/stylesheets/posts.less
@@ -6,7 +6,16 @@
   .makeColumn(10);
   textarea{
     width: 100%;
-    height: 4em;
+    height: 60px;
+    resize: none;
+  }
+
+  .tips, .actions {
+    display: none;
+  }
+
+  .tips {
+    text-align : right;
   }
 }
 
