--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,6 +8,9 @@ html(lang="en")
 
     //if lt IE 9
       script(src="http://html5shim.googlecode.com/svn/trunk/html5.js")
+    script(src="/javascripts/jquery-1.6.3.min.js")
+    script(src="/javascripts/autoresize/jquery.autoresize.js")
+    script(src="/javascripts/posts.js")
 
     link(href="/stylesheets/style.css", rel="stylesheet")
     <!-- Le fav and touch icons -->
@@ -15,7 +18,6 @@ html(lang="en")
     link(rel="apple-touch-icon", href="images/apple-touch-icon.png")
     link(rel="apple-touch-icon", sizes="72x72", href="images/apple-touch-icon-72x72.png")
     link(rel="apple-touch-icon", sizes="114x114", href="images/apple-touch-icon-114x114.png")
-
 
   body
 
