--- a/views/layout.jade
+++ b/views/layout.jade
@@ -10,6 +10,7 @@ html(lang="en")
       script(src="http://html5shim.googlecode.com/svn/trunk/html5.js")
     script(src="/javascripts/jquery-1.6.3.min.js")
     script(src="/javascripts/autoresize/jquery.autoresize.js")
+    script(src="/javascripts/github-flavored-markdown/scripts/showdown.js")
     script(src="/javascripts/posts.js")
 
     link(href="/stylesheets/style.css", rel="stylesheet")
