--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -336,7 +336,10 @@ footer{border:none;}
 .container>footer p{text-align:center;}
 .content{background-color:#eee;padding:20px;margin:0 -20px;min-height:500px;-webkit-border-radius:10px;-moz-border-radius:10px;border-radius:10px;background-color:#eeeeee;background-repeat:repeat-x;background-image:-khtml-gradient(linear, left top, left bottom, from(#e1e1e1), to(#eeeeee));background-image:-moz-linear-gradient(top, #e1e1e1, #eeeeee);background-image:-ms-linear-gradient(top, #e1e1e1, #eeeeee);background-image:-webkit-gradient(linear, left top, left bottom, color-stop(0%, #e1e1e1), color-stop(100%, #eeeeee));background-image:-webkit-linear-gradient(top, #e1e1e1, #eeeeee);background-image:-o-linear-gradient(top, #e1e1e1, #eeeeee);background-image:linear-gradient(top, #e1e1e1, #eeeeee);filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#e1e1e1', endColorstr='#eeeeee', GradientType=0);}
 .entry{margin-bottom:20px;}
-.new-post{display:inline;float:left;margin-left:20px;width:580px;}.new-post textarea{width:100%;height:4em;}
+.new-post{display:inline;float:left;margin-left:20px;width:592px;}.new-post textarea{width:98%;height:60px;resize:none;}
+.new-post .preview,.new-post .tips,.new-post .actions{display:none;}
+.new-post .tips{line-height:24px;font-weight:bold;}
+.new-post .preview{background-color:#ffffff;color:#000000;border:3px dotted #ccc;padding:20px;max-height:250px;overflow:auto;-webkit-border-radius:5px;-moz-border-radius:5px;border-radius:5px;}
 .avatar-info{display:inline;float:left;margin-left:20px;width:70px;}.avatar-info .avatar a.avatar{display:block;width:64px;height:64px;-webkit-border-radius:5px;-moz-border-radius:5px;border-radius:5px;-webkit-box-shadow:0 1px 3px rgba(0, 0, 0, 0.25);-moz-box-shadow:0 1px 3px rgba(0, 0, 0, 0.25);box-shadow:0 1px 3px rgba(0, 0, 0, 0.25);}
 .post{background-color:#ffffff;color:#000000;padding:20px;display:inline;float:left;margin-left:20px;width:550px;-webkit-border-radius:5px;-moz-border-radius:5px;border-radius:5px;-webkit-box-shadow:0 1px 3px rgba(0, 0, 0, 0.25);-moz-box-shadow:0 1px 3px rgba(0, 0, 0, 0.25);box-shadow:0 1px 3px rgba(0, 0, 0, 0.25);}.post a{color:rgba(0, 0, 0, 0.5);}
 .post a:hover{color:rgba(0, 0, 0, 0.8);}
