--- a/views/posts/index.jade
+++ b/views/posts/index.jade
@@ -11,55 +11,29 @@
 
       .new-post
         form
-          .clearfix.tips
-            a(href="#") Help &nbsp;
-            &nbsp;
-            a.collapse(href="#") &times;
+          .tips
+            div(style="float:right;")
+              a(href="#") Help &nbsp;
+              &nbsp;
+              a.collapse(href="#") &times;
+            div
+              a(href="#") Upload Image
+              &nbsp;
           .clearfix
             textarea.default(placeholder="")
                 #Title
-                
+
                 Content
-                
+
                 #tag#
+
+          .preview
+
           .clearfix.actions
-            a(href="#") Upload Image
-            &nbsp;
             input.btn.primary(type="submit", value="Post")
-          .clearfix.preview
 
 
-    .row.entry
-
-      .avatar-info
-        // avatar
-        .avatar
-          a.avatar(href="#", style="background-image:url('/images/avatar.png')", title="Jason's blog")
-          // show this on hover, click to pop menu
-          .user_info(onclick='function()')
-
-        // the popup menu
-        .user-menu
-          a(href="#") Chat
-          a(href="#") Unfollow
-
-      .post
-
-        .post-controls
-          a(href="#") 10 notes&nbsp;&nbsp;
-          a(href="#") reblog&nbsp;&nbsp;
-          a(href="#") like
-
-        .post-info
-          a(href="#") Jason Green
-            span :
-
-        .post-content
-          h3 The blog title
-          .inside-content
-            p blabla blabla. blabla blabla blabla blabla blabla blabla blabla blabla
-            p blabla blabla blabla blabla blabla blabla blabla blabla blabla blabla blabla blabla
-            p blabla blabla blabla blabla blabla blabla blabla blabla blabla blabla blabla blabla
+    != partial('entry', ['', '', '', '', '', '', '', '', ''])
 
   .span4.sidebar
 
