simple effect of comments

--- a/public/stylesheets/posts.less
+++ b/public/stylesheets/posts.less
@@ -59,6 +59,14 @@
     color:    @postLinkColorHover;
   }
 
+  .loading {
+    display: none;
+  }
+
+  .comments {
+    display: none;
+  }
+
 }
 
 .post-controls {
