--- a/views/posts/entry.jade
+++ b/views/posts/entry.jade
@@ -15,7 +15,7 @@
   .post
 
     .post-controls
-      a(href="#") 10 comments&nbsp;&nbsp;
+      a.show-comments(href="javascript:void(0)") 10 comments&nbsp;&nbsp;
       a(href="#") reblog&nbsp;&nbsp;
       a(href="#") like&nbsp;
       a(href="#") junk&nbsp;
@@ -32,4 +32,23 @@
         p blabla blabla blabla blabla blabla blabla blabla blabla blabla blabla blabla blabla
         p blabla blabla blabla blabla blabla blabla blabla blabla blabla blabla blabla blabla
 
-
+    .loading Loading...
+    .comments
+      .comment
+        p show something comments
+      .comment
+        p show something comments
+      .comment
+        p show something comments
+      .comment
+        p show something comments
+      .comment
+        p show something comments
+      .comment
+        p show something comments
+      .comment
+        p show something comments
+      .comment
+        p show something comments
+      .comment
+        p show something comments
