use Microsoft CDN for jquery

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,7 +8,7 @@ html(lang="en")
 
     //if lt IE 9
       script(src="http://html5shim.googlecode.com/svn/trunk/html5.js")
-    script(src="/javascripts/jquery-1.6.3.min.js")
+    script(src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.6.4.min.js")
     script(src="/javascripts/autoresize/jquery.autoresize.js")
     script(src="/javascripts/github-flavored-markdown/scripts/showdown.js")
     script(src="/javascripts/posts.js")
@@ -25,7 +25,7 @@ html(lang="en")
     .container
       header
         .user-controls
-          a(href="#") Logout
+          a(href="/signup") Sign up
 
         a(href="/")
           img(src="/images/logo-small.png")
@@ -34,5 +34,5 @@ html(lang="en")
         != body
 
       footer
-        p &copy; Company 2011
+        p &copy; Lin Gui 2011
 
