add preferences page

--- a/public/stylesheets/posts.less
+++ b/public/stylesheets/posts.less
@@ -41,6 +41,13 @@
       .box-shadow();
     }
   }
+
+  .user-menu {
+    display: none;
+  }
+  &:hover .user-menu{
+    display: block;
+  }
 }
 
 .post {
