--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -1,6 +1,9 @@
 // Bootstrap
 @import "../bootstrap/lib/bootstrap.less";
 
+// Fileuploader
+@import "fileuploader.less";
+
 // Project styles
 @import "layout.less";
 @import "posts.less";
