--- a/views/posts/entry.jade
+++ b/views/posts/entry.jade
@@ -9,8 +9,12 @@
 
     // the popup menu
     .user-menu
-      a(href="#") Chat
-      a(href="#") Unfollow
+      .clearfix
+        a 5123
+      .clearfix
+        a(href="#") Chat
+      .clearfix
+        a(href="#") Unfollow
 
   .post
 
