--- a/views/users/signup.jade
+++ b/views/users/signup.jade
@@ -12,6 +12,12 @@ form
     label(for="password") Password
     .input
       input(name="password", type="password", placeholder="Password")
+
+  .clearfix
+    label(for='repeat-password') Repeat Password
+    .input
+      input(name="repeat-password", type="password", placeholder="Repeat Password")
+
   .actions
     input.btn.primary(type="submit", value="Sign up")
     &nbsp;
