--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -328,9 +328,23 @@ button.btn::-moz-focus-inner,input[type=submit].btn::-moz-focus-inner{padding:0;
 .media-grid li{display:inline;}
 .media-grid a{float:left;padding:4px;margin:0 0 20px 20px;border:1px solid #ddd;-webkit-border-radius:4px;-moz-border-radius:4px;border-radius:4px;-webkit-box-shadow:0 1px 1px rgba(0, 0, 0, 0.075);-moz-box-shadow:0 1px 1px rgba(0, 0, 0, 0.075);box-shadow:0 1px 1px rgba(0, 0, 0, 0.075);}.media-grid a img{display:block;}
 .media-grid a:hover{border-color:rgba(0, 0, 0, 0.5);-webkit-box-shadow:0 1px 4px rgba(0, 105, 214, 0.25);-moz-box-shadow:0 1px 4px rgba(0, 105, 214, 0.25);box-shadow:0 1px 4px rgba(0, 105, 214, 0.25);}
+.qq-uploader{position:relative;width:100%;}
+.qq-upload-button{display:block;width:105px;padding:7px 0;text-align:center;background:#880000;border-bottom:1px solid #ddd;color:#fff;}
+.qq-upload-button-hover{background:#cc0000;}
+.qq-upload-button-focus{outline:1px dotted black;}
+.qq-upload-drop-area{position:absolute;top:0;left:0;width:100%;height:100%;min-height:70px;z-index:2;background:#FF9797;text-align:center;}
+.qq-upload-drop-area span{display:block;position:absolute;top:50%;width:100%;margin-top:-8px;font-size:16px;}
+.qq-upload-drop-area-active{background:#FF7171;}
+.qq-upload-list{margin:15px 35px;padding:0;list-style:disc;}
+.qq-upload-list li{margin:0;padding:0;line-height:15px;font-size:12px;}
+.qq-upload-file,.qq-upload-spinner,.qq-upload-size,.qq-upload-cancel,.qq-upload-failed-text{margin-right:7px;}
+.qq-upload-spinner{display:inline-block;background:url("../javascripts/file-uploader/client/loading.gif");width:15px;height:15px;vertical-align:text-bottom;}
+.qq-upload-size,.qq-upload-cancel{font-size:11px;}
+.qq-upload-failed-text{display:none;}
+.qq-upload-fail .qq-upload-failed-text{display:inline;}
 html,body{background-color:#eeeeee;color:#000000;}
 a,a:hover{text-decoration:none;}
-header .user-controls{float:right;}
+header .user-controls{float:right;padding:10px;}
 .page-header{background-color:#f5f5f5;padding:20px 20px 10px;margin:-20px -20px 20px;}
 footer{border:none;}
 .container>footer p{text-align:center;}
@@ -341,6 +355,8 @@ footer{border:none;}
 .new-post .tips{line-height:24px;font-weight:bold;}
 .new-post .preview{background-color:#ffffff;color:#000000;border:3px dotted #ccc;padding:20px;max-height:250px;overflow:auto;-webkit-border-radius:5px;-moz-border-radius:5px;border-radius:5px;}
 .avatar-info{display:inline;float:left;margin-left:20px;width:70px;}.avatar-info .avatar a.avatar{display:block;width:64px;height:64px;-webkit-border-radius:5px;-moz-border-radius:5px;border-radius:5px;-webkit-box-shadow:0 1px 3px rgba(0, 0, 0, 0.25);-moz-box-shadow:0 1px 3px rgba(0, 0, 0, 0.25);box-shadow:0 1px 3px rgba(0, 0, 0, 0.25);}
+.avatar-info .user-menu{display:none;}
+.avatar-info:hover .user-menu{display:block;}
 .post{background-color:#ffffff;color:#000000;padding:20px;display:inline;float:left;margin-left:20px;width:550px;-webkit-border-radius:5px;-moz-border-radius:5px;border-radius:5px;-webkit-box-shadow:0 1px 3px rgba(0, 0, 0, 0.25);-moz-box-shadow:0 1px 3px rgba(0, 0, 0, 0.25);box-shadow:0 1px 3px rgba(0, 0, 0, 0.25);}.post a{color:rgba(0, 0, 0, 0.5);}
 .post a:hover{color:rgba(0, 0, 0, 0.8);}
 .post .loading{display:none;}
