--- a/views/layout.jade
+++ b/views/layout.jade
@@ -11,7 +11,7 @@ html(lang="en")
     script(src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.6.4.min.js")
     script(src="/javascripts/autoresize/jquery.autoresize.js")
     script(src="/javascripts/github-flavored-markdown/scripts/showdown.js")
-    script(src="/javascripts/posts.js")
+    script(src="/javascripts/file-uploader/client/fileuploader.js")
 
     link(href="/stylesheets/style.css", rel="stylesheet")
     <!-- Le fav and touch icons -->
