update signup page

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -4,6 +4,9 @@
 // Fileuploader
 @import "fileuploader.less";
 
+// H5F
+@import "h5f.less";
+
 // Project styles
 @import "layout.less";
 @import "posts.less";
