--- a/views/posts/entry.jade
+++ b/views/posts/entry.jade
@@ -5,7 +5,7 @@
     .avatar
       a.avatar(href="#", style="background-image:url('/images/avatar.png')", title="Jason's blog")
       // show this on hover, click to pop menu
-      .user_info(onclick='function()')
+      .user_info
 
     // the popup menu
     .user-menu
