--- a/views/preferences.jade
+++ b/views/preferences.jade
@@ -6,9 +6,9 @@ script(src="/javascripts/preferences.js")
 
 form
   .clearfix
-    label(for="username") Username
+    label(for="email") Username
     .input
-      input(name="username", placeholder="User name")
+      input(name="email", placeholder="User name")
 
   .clearfix
     label(for="password") Current Password
