--- a/views/users/signin.jade
+++ b/views/users/signin.jade
@@ -4,9 +4,9 @@
 
 form
   .clearfix
-    label(for="username") Username
+    label(for="email") Username
     .input
-      input(name="username", placeholder="User name")
+      input(name="email", placeholder="User name")
 
   .clearfix
     label(for="password") Password
