--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,14 +6,19 @@ html(lang="en")
     meta(name="description", content="")
     meta(name="author", content="")
 
+    link(href="/stylesheets/style.css", rel="stylesheet")
+
     //if lt IE 9
       script(src="http://html5shim.googlecode.com/svn/trunk/html5.js")
     script(src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.6.4.min.js")
     script(src="/javascripts/autoresize/jquery.autoresize.js")
     script(src="/javascripts/github-flavored-markdown/scripts/showdown.js")
     script(src="/javascripts/file-uploader/client/fileuploader.js")
+    script(src="/javascripts/H5F/h5f.js")
+    script(src="/javascripts/form/jquery.form.js")
+    script(src="/javascripts/jquery-pjax/jquery.pjax.js")
+    script(src="/javascripts/app.js")
 
-    link(href="/stylesheets/style.css", rel="stylesheet")
     <!-- Le fav and touch icons -->
     link(rel="shortcut icon", href="images/favicon.ico")
     link(rel="apple-touch-icon", href="images/apple-touch-icon.png")
@@ -25,13 +30,15 @@ html(lang="en")
     .container
       header
         .user-controls
-          a(href="/signup") Sign up
+          a.pjax(href="/signup") Sign up
 
         a(href="/")
           img(src="/images/logo-small.png")
 
       .content
-        != body
+        .current
+          != body
+        .next
 
       footer
         p &copy; Lin Gui 2011
