--- a/views/users/signup.jade
+++ b/views/users/signup.jade
@@ -2,23 +2,37 @@
   h1 Page name 
     small Supporting text or tagline
 
-form
+form#signup(method='post', action='/signup')
   .clearfix
-    label(for="username") Username
+    label(for='email') Email
     .input
-      input(name="username", placeholder="User name")
+      input(type='email', name='email', placeholder='Email', required)
 
   .clearfix
-    label(for="password") Password
+    label(for='password') Password
     .input
-      input(name="password", type="password", placeholder="Password")
+      input(name='password', type='password', placeholder='Password', required)
 
   .clearfix
     label(for='repeat-password') Repeat Password
     .input
-      input(name="repeat-password", type="password", placeholder="Repeat Password")
+      input(name='repeat-password', type='password', placeholder='Repeat Password', required)
 
   .actions
-    input.btn.primary(type="submit", value="Sign up")
+    input.btn.primary(type='submit', value='Sign up')
     &nbsp;
-    button.btn(type="reset") Cancel
+    button.btn(type='reset') Cancel
+
+script
+  $(function(){
+    H5F.setup(document.getElementById('signup'));
+    $('#signup').ajaxForm({
+      error: function(xhr){
+      },
+      success: function(data, s, x){
+        if(data.success){
+          
+        }
+      }
+    });
+  });
