--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,16 +7,26 @@ html(lang="en")
     meta(name="author", content="")
 
     link(href="/stylesheets/style.css", rel="stylesheet")
+    link(href='/javascripts/jquery-notify/ui.notify.css', rel='stylesheet')
 
     //if lt IE 9
       script(src="http://html5shim.googlecode.com/svn/trunk/html5.js")
-    script(src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.6.4.min.js")
+    script(src='/javascripts/jquery-1.6.3.min.js')
+    script(src='/javascripts/jquery.ui.widget.js')
+    // microsoft CDN
+      script(src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.6.4.min.js")
+      script(src='http://ajax.aspnetcdn.com/ajax/jquery.ui/1.8.16/jquery-ui.min.js')
+    // google CDN
+      script(src='http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js')
+      script(src='http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js')
+
     script(src="/javascripts/autoresize/jquery.autoresize.js")
     script(src="/javascripts/github-flavored-markdown/scripts/showdown.js")
     script(src="/javascripts/file-uploader/client/fileuploader.js")
     script(src="/javascripts/H5F/h5f.js")
     script(src="/javascripts/form/jquery.form.js")
     script(src="/javascripts/jquery-pjax/jquery.pjax.js")
+    script(src='/javascripts/jquery-notify/src/jquery.notify.js')
     script(src="/javascripts/app.js")
 
     block scripts
@@ -27,22 +37,34 @@ html(lang="en")
     link(rel="apple-touch-icon", sizes="72x72", href="images/apple-touch-icon-72x72.png")
     link(rel="apple-touch-icon", sizes="114x114", href="images/apple-touch-icon-114x114.png")
 
-  body
+  body(class=locals.bodyClasses)
 
     .container
       header
         .user-controls
-          a.pjax(href="/signup") Sign up
+          - if(user)
+            a.preferences(href="/preferences") Preferences
+            &nbsp;
+            a.signout(href='/signout') Sign out
+          - else
+            a.signup(href="/signup") Sign up
 
         a(href="/")
           img(src="/images/logo-small.png")
 
       .content
+        #notify-container.ui-notify
+           #basic-template
+             a.ui-notify-cross.ui-notify-close(href="#")&times;
+             h1 \#{title}
+             p \#{text}
+
         .current
           block content
             != body
         .next
 
       footer
-        p &copy; Lin Gui 2011
+        p &copy; posts.li 2011
+
 
