preferences page small changes

--- a/public/stylesheets/layout.less
+++ b/public/stylesheets/layout.less
@@ -23,7 +23,12 @@ header{
   height: 73px;
   .user-controls {
     float: right;
-    padding: 10px;
+    margin: 10px;
+
+    img {
+      vertical-align: middle;
+      margin-right: 3px;
+    }
   }
 }
 
