--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -7,6 +7,9 @@
 // H5F
 @import "h5f.less";
 
-// Project styles
+// layout styles
 @import "layout.less";
+
+// pages styles
 @import "posts.less";
+@import "preferences.less";
