--- a/views/posts/entry.jade
+++ b/views/posts/entry.jade
@@ -32,6 +32,7 @@
     .post-content
       h3 The blog title
       .inside-content
+        != locals.html
         p blabla blabla. blabla blabla blabla blabla blabla blabla blabla blabla
         p blabla blabla blabla blabla blabla blabla blabla blabla blabla blabla blabla blabla
         p blabla blabla blabla blabla blabla blabla blabla blabla blabla blabla blabla blabla
