--- a/views/posts/index.jade
+++ b/views/posts/index.jade
@@ -16,25 +16,26 @@ block content
             a.avatar(href="#", style="background-image:url('#{avatar(user.md5, 64)}')", title="Jason's blog")
 
         .new-post
-          form
-            .tips
-              div(style="float:right;")
-                a(href="#") Help &nbsp;
-                &nbsp;
-                a.collapse(href="#") &times;
-              div
-                a(href="#") Upload Image
-                #btn-uploader
-                &nbsp;
+          .tips
+            div(style="float:right;")
+              a(href="#") Help &nbsp;
+              &nbsp;
+              a.collapse(href="#") &times;
+            div
+              a(href="#") Upload Image
+              #btn-uploader
+              &nbsp;
+          form(action="/posts/new", method="post", name='post')
             .clearfix
-              textarea.default(placeholder="Say something")
+              textarea.default(placeholder="Say something", name='content')
             .preview
 
             .clearfix.actions
               input.btn.primary(type="submit", value="Post")
 
 
-      != partial('entry', ['', '', '', '', '', '', '', '', ''])
+      #posts-list
+        != partial('entry', locals.posts)
 
     .span4.sidebar
 
@@ -43,7 +44,7 @@ block content
         a.follower(href="#") Follower 50
 
       section
-        form
+        form(name="search")
           input(type="search", placeholder="Search here")
 
       section.quests
