--- a/public/stylesheets/layout.less
+++ b/public/stylesheets/layout.less
@@ -25,6 +25,16 @@ header{
     float: right;
     margin: 10px;
 
+    form.search {
+      display: inline-block;
+      input {
+        height: 15px;
+        width: 150px;
+        border-radius: 15px;
+      }
+      margin: 0 10px;
+    }
+
     img {
       vertical-align: middle;
       margin-right: 3px;
