--- a/views/posts/entry.jade
+++ b/views/posts/entry.jade
@@ -23,8 +23,9 @@
       // show-comment       1
       // add comment        2
       // bookmark(favorit)  3
-      // reblog             4
+      // reblog             4  need comment
       // junk              -5
+      // searching keywords also effect to user taste
 
       a(href="#") reblog&nbsp;&nbsp;
       // &#9733; for selected
