adjust newPost editor views

--- a/public/stylesheets/layout.less
+++ b/public/stylesheets/layout.less
@@ -31,6 +31,9 @@ header{
         height: 15px;
         width: 150px;
         border-radius: 15px;
+        padding-right: 18px;
+        padding-left: 10px;
+        background: @postBackground url(../images/find.png) right no-repeat;
       }
       margin: 0 10px;
     }
