--- a/public/stylesheets/posts.less
+++ b/public/stylesheets/posts.less
@@ -11,11 +11,21 @@
   .side-controls {
     float: right;
     width: 300px;
-    margin: 120px -320px 0 0;
+    margin: 20px -320px 0 0;
     label {
       float : none;
     }
   }
+
+  input.slug{
+    background:none;
+    .box-shadow(none);
+    .border-radius(0);
+    width:150px;
+    border: none;
+    border-bottom: 1px solid rgba(0,0,0,0.5);
+  }
+
   textarea{
     width: 98%;
     height: 60px;
