frontend about sync

--- a/public/stylesheets/posts.less
+++ b/public/stylesheets/posts.less
@@ -26,9 +26,15 @@
     border-bottom: 1px solid rgba(0,0,0,0.5);
   }
 
-  textarea{
+  textarea[name="content"]{
     width: 98%;
     height: 60px;
+    resize: none;
+  }
+
+  textarea[name="description"]{
+    width: 75%;
+    height: 4em;
     resize: none;
   }
 
